# rvowpalwabbit

./: .Rbuildignore  .travis.yml  ChangeLog  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac  configure.in
.github/workflows/: ci.yaml
R/: RcppExports.R  vw.R
demo/: 00Index  vw.R
inst/test/: README.R-package
inst/test/models/: 0001.model  0002.model  0002a.model  0002c.model
inst/test/train-sets/: 0001.dat.cache
local/: writeCheck.sh
man/: vw.Rd
src/: Makevars  Makevars.in  R_vw.cpp  RcppExports.cpp  accumulate.cc  accumulate.h  active_interactor.cc  allreduce.cc  bfgs.cc  cache.cc  comp_io.h  delay_ring.cc  gd.cc  gd.h  gd_mf.cc  global_data.cc  hash.cc  init.c  io.h  lda_core.cc  loss_functions.cc  message_relay.cc  multisource.cc  network.cc  noop.cc  parse_args.cc  parse_example.cc  parse_example.h  parse_primitives.h  parse_regressor.cc  parser.cc  sender.cc  simple_label.cc  sparse_dense.cc  unique_sort.cc  v_array.h  vw.cc
tests/: test1.r  test2.r  test5.r  test6.r  test7.r  test8.r
